# DataCollectionMov

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: denue.yml  ecobici-catalog.yml  ecobici-historical.yml  ecobici-realtime.yml  google-routes.yml  metrobus-realtime.yml  metrobus-static.yml  tomtom-one-month-history.yml  tomtom-traffic.yml
SubRepo/: .gitignore  README.md  requirements.txt
SubRepo/appscript/: .claspignore  Code.gs  Data.gs  Index.html  README_DEPLOY.md  appsscript.json
SubRepo/data/: centroids_df.csv  routes_google_gallery_summary.csv
SubRepo/scripts/: build_appscript_data.py  build_routes.py
configs/: tables.yml
data/: README.md
data/current/: campus_cdmx_base.csv  denue_cdmx_educacion_superior_universitaria.csv  denue_metadata_reporte.csv  ecobici_gbfs_feed_urls.csv  ecobici_gbfs_station_status.csv  ecobici_realtime_stations.csv  routes_api_drive_pairs.csv  routes_api_matriz.csv  tomtom_cdmx_flow.csv
data/manifests/: 20260605T013733Z_ecobici.json  20260605T014134Z_google_routes.json  20260605T014134Z_google_routes_artifacts.json  20260605T014202Z_tomtom.json  20260605T014202Z_tomtom_artifacts.json  20260605T014214Z_metrobus.json  20260605T014214Z_metrobus_artifacts.json  20260605T064250Z_metrobus.json  20260605T064250Z_metrobus_artifacts.json  20260605T064549Z_tomtom.json  20260605T064549Z_tomtom_artifacts.json  20260605T064937Z_ecobici.json  20260605T153215Z_tomtom.json  20260605T153215Z_tomtom_artifacts.json  (+158 more)
docs/: README_LECTURA_TABLAS.md  periodicidad.md  tablas.md
scripts/: build_incident_response_routes.py
(+399 files in other folders)
